# ifc2step

./: CMakeLists.txt  README.md  ifc2step.cc
